# 2.5D_Rerendering

./: CMakeLists.txt  README.md  prompt.md
include/: config.hpp  depth_io.hpp  depth_mesh.hpp  egl_context.hpp  framebuffer.hpp  gl_renderer.hpp  image_io.hpp  mesh_generator.hpp  shader.hpp  types.hpp
output_real/: scale_0.50_depth.exr  scale_0.75_depth.exr  scale_1.00_depth.exr  scale_1.50_depth.exr  scale_2.00_depth.exr
sample_data/: 1760555346625227295_depth_camera_info.json
scripts/: build.sh  install_dependencies.sh  run_demo.sh
src/: main.cpp
src/app/: config.cpp
src/io/: depth_io.cpp  image_io.cpp
src/mesh/: depth_mesh.cpp  mesh_generator.cpp
src/render/: egl_context.cpp  framebuffer.cpp  gl_renderer.cpp  shader.cpp
test/: generate_sample.cpp  test_rerender.cpp
